# Project_LemonLime

./: .clinerules  .gitignore  CMakeLists.txt  activeContext.md  agents.md  claude.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.claude/: settings.local.json
.github/workflows/: cpack-deb-debian.yml  deploy-manual.yml  hashfile.yml  linux-static-qt6.yml  macos-qt6.yml  windows-qt6.yml
docs/reviews/: 2026-02-26.md  2026-03-24-tests.md  2026-03-24.md  2026-03-25-pr292-review.md  2026-04-08-exttestcasemodifier.md  2026-04-26.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pagefind/: pagefind-entry.json  pagefind.en_559b20f0a0.pf_meta  pagefind.en_a4e9b0481d.pf_meta
pagefind/fragment/: en_a3234fa.pf_fragment
pagefind/index/: en_60389d1.pf_index  en_eb0f628.pf_index
quickstart/: index.html
src/: addcompilerwizard.cpp  generalsettings.cpp  judgingdialog.cpp  lemon.cpp  opencontestwidget.cpp
src/base/: LemonBaseApplication.cpp  LemonLog.hpp  LemonTranslator.cpp  settings.cpp  settings.h
src/core/: contest.cpp  contestant.cpp  judgesharedvariables.cpp  judgingthread.cpp  processrunner_unix.cpp  processrunner_win.cpp  taskjudger.cpp
tests/core/: CMakeLists.txt  README.md  test_contest.cpp  test_contestant.cpp  test_judgingcontroller.cpp  test_task.cpp  test_testcase.cpp
tests/core/testdata/: invalid_contest.json  valid_contest.json
unix/: watcher_macos.cpp  watcher_unix.cpp
